--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+*,*::before, *::after{
+  box-sizing: border-box;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: normal ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.body{
+ padding: 0;
+ margin: 0;
+ background: linear-gradient(to right,#FE5D26,#7EBC89);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calculator-grid{
+ display: grid;
+ justify-content: center;
+ align-content: center;
+ min-height: 100vh; 
+ grid-template-columns: repeat(4,100px);
+ grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.calculator-grid button{
+ cursor: pointer;
+ font-size: 2rem;
+ border: 1px solid white;
+ outline: none;
+background-color: rgba(255, 255, 255, 0.25);
 }
 
-.App-link {
-  color: #61dafb;
+.calculator-grid button:hover{
+background-color: rgba(255, 255, 255, 0.9);  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.span-two{
+ grid-column: span 2;
+}
+
+.display{
+ grid-column: 1/ -1;
+ background-color: rgba(0, 0, 0, 0.75);
+ display: flex;
+ align-items: flex-end;
+ justify-content: space-around;
+ flex-direction: column;
+ padding: 10px;
+ word-break: break-all;
+ word-wrap: break-word;     
+}
+
+.display .previous-display{
+ color: rgba(255, 255, 255, 0.25);
+ font-size: 1.5rem;
+}
+
+.display .current-display{
+ color: white;
+ font-size: 2.5rem;
+}
+
+.fa{
+ color: white;
+}
+
+.span-four{
+ grid-column: span 4;
 }
